Updated project buttons

--- a/index.html
+++ b/index.html
@@ -1024,15 +1024,21 @@
             </div>
             <div class="project-buttons">
               <button class="ui-btn">
-                <span onclick="show404()">Hidden</span>
+                <span>
+                  <a
+                    href="https://github.com/Passion-Over-Pain/The-Atlas-Six"
+                    target="_blank">
+                    Code
+                  </a>
+                </span>
               </button>
 
               <button class="ui-btn">
                 <span onclick="show404()">Hidden</span>
               </button>
 
-              <button class="ui-btn">
-                <span onclick="show404()">Hidden</span>
+              <button class="ui-btn" onclick="starRepository(`The-Atlas-Six`)">
+                <span>Waitlist</span>
               </button>
             </div>
           </div>
