--- a/index.html
+++ b/index.html
@@ -958,7 +958,11 @@
                   <br />
                   Deputy Chairperson of the
                   <span class="textBtn">
-                    <a href="">NMU Computer Society</a>
+                    <a
+                      href="https://www.linkedin.com/company/computersociety/"
+                      target="_blank">
+                      NMU Computer Society
+                    </a>
                   </span>
                 </li>
                 <br />
@@ -966,7 +970,14 @@
                   <br />
                   [March 2024 ~ December 2024]
                   <br />
-                  Events Coordinator of the NMU Computer Society
+                  Events Coordinator of the
+                  <span class="textBtn">
+                    <a
+                      href="https://www.linkedin.com/company/computersociety/"
+                      target="_blank">
+                      NMU Computer Society
+                    </a>
+                  </span>
                 </li>
                 <br />
                 <span style="color: #0f0">Working experience</span>
@@ -974,7 +985,14 @@
                   <br />
                   [June 2024 ~ July 2024]
                   <br />
-                  Oasis Infobyte Junior Web Development Intern
+                  <span class="textBtn">
+                    <a
+                      href="https://www.linkedin.com/company/oasis-infobyte/"
+                      target="_blank">
+                      Oasis Infobyte
+                    </a>
+                  </span>
+                  Junior Web Development Intern
                 </li>
                 <br />
               </ul>
@@ -999,7 +1017,7 @@
           <div class="project-details">
             <h2>The Atlas Six</h2>
             <p>
-              The Atlas Six is a story-driven game set in a world of magic,
+              The Atlas Six is a text-driven game set in a world of magic,
               ancient mysteries, and alliances that are not always what they
               seem. The journey revolves around the choices made by the created
               player and the evolving relationships within the party.
