--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,7 @@
             <h2>CreateIT</h2>
             <p>
               A mobile application prototype that incorporates user's on hands
-              ingredients to consume APIs. CreateIT recommendS meals based on
+              ingredients to consume APIs. CreateIT recommends meals based on
               available ingredients, offering a practical and delicious solution
               to everyday meal planning.
             </p>
