--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="style.css"
+      media="print"
+      onload="this.media='all'" />
+    <noscript><link rel="stylesheet" href="style.css" /></noscript>
+
     <link rel="canonical" href="https://tinotenda-mhedziso.pages.dev/" />
     <meta name="robots" content="index, follow" />
 
@@ -58,15 +64,16 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css" />
     <!-- Notyf JS -->
-    <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"
+      defer></script>
     <!-- GSAP CDN link -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
-    <!-- Video Js for status videos -->
-    <link
-      href="https://unpkg.com/video.js/dist/video-js.css"
-      rel="stylesheet" />
-    <script src="https://unpkg.com/video.js/dist/video.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"
+      defer></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"
+      defer></script>
 
     <title>Tinotenda Mhedziso | Portfolio</title>
   </head>
@@ -78,7 +85,6 @@
     </div>
     <!-------------------------------------------Header Start----------------------------------------------------------------------------------->
     <header>
-     
       <div class="modalBackground" id="passionModal">
         <div id="passionCard">
           <div class="card__content">
@@ -599,69 +605,7 @@
             id="musicToggleIcon" />
         </button>
       </div>
-      <!-- <nav>
-        <ul class="menu">
-          <div class="menuToggle" onclick="openNavMenu()">
-            <ion-icon name="add-outline" id="menuOpener"></ion-icon>
-          </div>
-          <img
-            src="Images/Icons/inspect.svg"
-            id="tooltipToggle"
-            alt="Toggle tooltips" />
 
-          <li style="--i: 0">
-            <a href="#">
-              <ion-icon name="home-outline"></ion-icon>
-              <span class="tooltip">Home</span>
-            </a>
-          </li>
-          <li style="--i: 1">
-            <a href="#AboutSection">
-              <ion-icon name="person-outline"></ion-icon>
-              <span class="tooltip">About Me</span>
-            </a>
-          </li>
-          <li style="--i: 2">
-            <a href="#ProjectsSection">
-              <ion-icon name="desktop-outline"></ion-icon>
-              <span class="tooltip">Projects</span>
-            </a>
-          </li>
-          <li style="--i: 3">
-            <a href="#SkillsSection">
-              <ion-icon class="fa-solid fa-award"></ion-icon>
-              <span class="tooltip">Skills</span>
-            </a>
-          </li>
-          <li style="--i: 4">
-            <a id="Anime">
-              <ion-icon name="accessibility-sharp"></ion-icon>
-              <span class="tooltip">Toggle Animations</span>
-            </a>
-          </li>
-          <li style="--i: 5" onclick="toggleCheckList()">
-            <a>
-              <ion-icon class="fa-solid fa-list-check"></ion-icon>
-              <span class="tooltip">Checklist</span>
-            </a>
-          </li>
-          <li style="--i: 6" onclick="showToS()">
-            <a>
-              <ion-icon name="shield-checkmark-sharp"></ion-icon>
-              <span class="tooltip">My Terms of Service</span>
-            </a>
-          </li>
-          <li style="--i: 7">
-            <a>
-              <ion-icon
-                name="download-outline"
-                onclick="downloadCV()"></ion-icon>
-              <span class="tooltip">Download My CV</span>
-            </a>
-          </li>
-        </ul>
-      </nav> -->
-      <!-- Navigation Toggle Button (Styled like Webchat Toggle) -->
       <button class="nav-toggle" id="nav-toggle">📜</button>
 
       <div id="nav-overlay"></div>
@@ -1063,6 +1007,7 @@
           </div>
           <div class="project-preview">
             <img
+              loading="lazy"
               src="Images/Previews/The Atlas Six.webp"
               alt="The Atlas Six Preview" />
           </div>
@@ -1119,7 +1064,10 @@
             </div>
           </div>
           <div class="project-preview">
-            <img src="Images/Previews/Passion.webp" alt="Passion Preview" />
+            <img
+              loading="lazy"
+              src="Images/Previews/Passion.webp"
+              alt="Passion Preview" />
           </div>
         </div>
 
@@ -1175,7 +1123,10 @@
             </div>
           </div>
           <div class="project-preview">
-            <img src="Images/Previews/CreateIT.webp" alt="CreateIT Preview" />
+            <img
+              loading="lazy"
+              src="Images/Previews/CreateIT.webp"
+              alt="CreateIT Preview" />
           </div>
         </div>
 
@@ -1232,7 +1183,10 @@
             </div>
           </div>
           <div class="project-preview">
-            <img src="Images/Previews/ProjectApp.webp" alt="TaskApp Preview" />
+            <img
+              loading="lazy"
+              src="Images/Previews/ProjectApp.webp"
+              alt="TaskApp Preview" />
           </div>
         </div>
 
@@ -1301,6 +1255,7 @@
               href="https://passion-over-pain.github.io/Portfolio-Redesigned/"
               target="_blank">
               <img
+                loading="lazy"
                 src="Images/Previews/Old-Portfolio.webp"
                 alt="Template Portfolio Preview" />
             </a>
@@ -1370,6 +1325,7 @@
               href="https://passion-over-pain.github.io/AccountingFirm/"
               target="_blank">
               <img
+                loading="lazy"
                 src="Images/Previews/AccountingFirm.webp"
                 alt="Accounting Firm Website Preview" />
             </a>
@@ -1767,16 +1723,8 @@
     <script type="text/javascript" src="p5.min.js"></script>
     <script type="text/javascript" src="p5.sound.min.js"></script>
     <script>
-      window.p5 = p5; // Ensuring that p5 is globally available, was giving errrors
+      window.p5 = p5;
     </script>
-    <script type="text/javascript" src="function.js" defer></script>
-
-    <!-- <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script> -->
 
     <link
       rel="stylesheet"
@@ -1789,5 +1737,7 @@
       integrity="sha512-wC/cunGGDjXSl9OHUH0RuqSyW4YNLlsPwhcLxwWW1CR4OeC2E1xpcdZz2DeQkEmums41laI+eGMw95IJ15SS3g=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"></script>
+
+    <script type="text/javascript" src="function.js" defer></script>
   </body>
 </html>
