Reduced Image sizes

--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
         <!-- Profile Section -->
         <div class="nav-profile">
           <img
-            src="Images/levelpic.webp"
+            src="Images/Icons/character.svg"
             alt="Level Profile Picture"
             class="profile-pic"
             id="levelShower" />
