--- a/index.html
+++ b/index.html
@@ -55,6 +55,19 @@
     <link rel="apple-touch-icon" sizes="180x180" href="Images/Favicon.png" />
 
     <link rel="shortcut icon" href="Images/Favicon.png" type="image/x-icon" />
+    <link
+      rel="preload"
+      href="PixelifySans.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous" />
+    <link
+      rel="preload"
+      href="Quantico-Regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous" />
+
     <link rel="preconnect" href="https://cdn.jsdelivr.net" />
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
     <link rel="preconnect" href="https://unpkg.com" />
