--- a/index.html
+++ b/index.html
@@ -1148,14 +1148,11 @@
             <img src="Images/Icons/checklist.svg" alt="TaskApp Icon" />
           </div>
           <div class="project-details">
-            <h2>Project Management App</h2>
+            <h2>CheckIT</h2>
             <p>
-              This project management app utilizes ASP.NET Core Web APIs with
-              Entity Framework and SQL Server for data storage. It offers
-              comprehensive task tracking and employee management features,
-              ensuring secure and efficient project workflows. The application
-              supports role-based authentication and authorization to perform
-              actions.
+              A full-stack Android app using Java and SQLite that facilitates
+              task management between instructors and students, with role-based
+              access for admins, instructors, and students.
             </p>
             <p>
               <strong>Platforms:</strong>
@@ -1166,39 +1163,41 @@
               Released - 1.
             </p>
             <div class="project-tags">
-              <span class="tag">ASP.NET</span>
-              <span class="tag">C#</span>
-              <span class="tag">React</span>
-              <span class="tag">SQL Database</span>
+              <span class="tag">Android Studio</span>
+              <span class="tag">Java</span>
+              <span class="tag">Mobile</span>
+              <span class="tag">SQLite</span>
               <span class="tag">Task App</span>
             </div>
             <div class="project-buttons">
               <button class="ui-btn project-code-btn">
                 <span>
                   <a
-                    href="https://github.com/Passion-Over-Pain/ProjectManagementApp-Assignment"
+                    href="https://github.com/Passion-Over-Pain/CheckIT"
                     target="_blank">
                     Code
                   </a>
                 </span>
               </button>
 
-              <button class="ui-btn">
-                <span>Unavailable</span>
+              <button class="ui-btn project-download-btn">
+                <span>
+                  <a
+                    href="https://github.com/Passion-Over-Pain/IMOB-Assignment/releases/download/v1.0/lms-v1.apk">
+                    Download
+                  </a>
+                </span>
               </button>
 
               <button class="ui-btn">
-                <span
-                  onclick="starRepository(`ProjectManagementApp-Assignment`)">
-                  Like
-                </span>
+                <span onclick="starRepository(`CheckIT`)">Like</span>
               </button>
             </div>
           </div>
           <div class="project-preview">
             <img
               loading="lazy"
-              src="Images/Previews/ProjectApp.webp"
+              src="Images/Previews/checkit.webp"
               alt="TaskApp Preview" />
           </div>
         </div>
