--- a/index.html
+++ b/index.html
@@ -1109,6 +1109,7 @@
               <span class="tag">CSV</span>
               <span class="tag">Food App</span>
               <span class="tag">Local-Database</span>
+              <span class="tag">Team Project</span>
             </div>
             <div class="project-buttons">
               <button class="ui-btn project-code-btn">
@@ -1168,6 +1169,7 @@
               <span class="tag">Mobile</span>
               <span class="tag">SQLite</span>
               <span class="tag">Task App</span>
+              <span class="tag">Team Project</span>
             </div>
             <div class="project-buttons">
               <button class="ui-btn project-code-btn">
