--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link
       rel="stylesheet"
       href="style.css"
-      media="print"
-      onload="this.media='all'" />
+         />
     <noscript><link rel="stylesheet" href="style.css" /></noscript>
 
     <link rel="canonical" href="https://tinotenda-mhedziso.pages.dev/" />
@@ -1084,6 +1083,66 @@
           </div>
         </div>
 
+  <div class="project-item" id="CheckIT">
+          <div class="project-icon">
+            <img src="Images/Icons/checklist.svg" alt="CheckIT Icon" />
+          </div>
+          <div class="project-details">
+            <h2>CheckIT</h2>
+            <p>
+              A full-stack Android app using Java and SQLite that facilitates
+              task management between instructors and students, with role-based
+              access for admins, instructors, and students.
+            </p>
+            <p>
+              <strong>Platforms:</strong>
+             Android
+            </p>
+            <p>
+              <strong>Version:</strong>
+              Released - 1.
+            </p>
+            <div class="project-tags">
+              <span class="tag">Android Studio</span>
+              <span class="tag">Java</span>
+              <span class="tag">Mobile</span>
+              <span class="tag">SQLite</span>
+              <span class="tag">Task App</span>
+              <span class="tag">Team Project</span>
+            </div>
+            <div class="project-buttons">
+              <button class="ui-btn project-code-btn">
+                <span>
+                  <a
+                    href="https://github.com/Passion-Over-Pain/CheckIT"
+                    target="_blank">
+                    Code
+                  </a>
+                </span>
+              </button>
+
+              <button class="ui-btn project-download-btn">
+                <span>
+                  <a
+                    href="https://github.com/Passion-Over-Pain/IMOB-Assignment/releases/download/v1.0/lms-v1.apk">
+                    Download
+                  </a>
+                </span>
+              </button>
+
+              <button class="ui-btn">
+                <span onclick="starRepository(`CheckIT`)">Like</span>
+              </button>
+            </div>
+          </div>
+          <div class="project-preview">
+            <img
+              loading="lazy"
+              src="Images/Previews/CheckIT.webp"
+              alt="CheckIT Preview" />
+          </div>
+        </div>
+
         <div class="project-item" id="CreateIT">
           <div class="project-icon">
             <img src="Images/Icons/createIT.svg" alt="CreateIT Icon" />
@@ -1144,74 +1203,16 @@
           </div>
         </div>
 
-        <div class="project-item" id="TaskApp">
-          <div class="project-icon">
-            <img src="Images/Icons/checklist.svg" alt="TaskApp Icon" />
-          </div>
-          <div class="project-details">
-            <h2>CheckIT</h2>
-            <p>
-              A full-stack Android app using Java and SQLite that facilitates
-              task management between instructors and students, with role-based
-              access for admins, instructors, and students.
-            </p>
-            <p>
-              <strong>Platforms:</strong>
-              Desktop and Laptop
-            </p>
-            <p>
-              <strong>Version:</strong>
-              Released - 1.
-            </p>
-            <div class="project-tags">
-              <span class="tag">Android Studio</span>
-              <span class="tag">Java</span>
-              <span class="tag">Mobile</span>
-              <span class="tag">SQLite</span>
-              <span class="tag">Task App</span>
-              <span class="tag">Team Project</span>
-            </div>
-            <div class="project-buttons">
-              <button class="ui-btn project-code-btn">
-                <span>
-                  <a
-                    href="https://github.com/Passion-Over-Pain/CheckIT"
-                    target="_blank">
-                    Code
-                  </a>
-                </span>
-              </button>
+      
 
-              <button class="ui-btn project-download-btn">
-                <span>
-                  <a
-                    href="https://github.com/Passion-Over-Pain/IMOB-Assignment/releases/download/v1.0/lms-v1.apk">
-                    Download
-                  </a>
-                </span>
-              </button>
-
-              <button class="ui-btn">
-                <span onclick="starRepository(`CheckIT`)">Like</span>
-              </button>
-            </div>
-          </div>
-          <div class="project-preview">
-            <img
-              loading="lazy"
-              src="Images/Previews/checkit.webp"
-              alt="TaskApp Preview" />
-          </div>
-        </div>
-
-        <div class="project-item" id="TemplatePortfolio">
+        <div class="project-item" id="KnightPortfolio">
           <div class="project-icon">
             <img
               src="Images/Icons/portfolio.svg"
-              alt="Template Portfolio Icon" />
+              alt="Knight Portfolio Icon" />
           </div>
           <div class="project-details">
-            <h2>Template Portfolio</h2>
+            <h2>Knight Portfolio</h2>
             <p>
               An older version on my portfolio website built from the Knight
               Bootstrap template.
@@ -1271,7 +1272,7 @@
               <img
                 loading="lazy"
                 src="Images/Previews/Old-Portfolio.webp"
-                alt="Template Portfolio Preview" />
+                alt="Knight Portfolio Preview" />
             </a>
           </div>
         </div>
@@ -1279,7 +1280,7 @@
           <div class="project-icon">
             <img
               src="Images/Icons/accountingfirm.svg"
-              alt="Template Portfolio Icon" />
+              alt="Knight Portfolio Icon" />
           </div>
           <div class="project-details">
             <h2>Accounting Firm Website</h2>
@@ -1606,7 +1607,7 @@
                 <p class="project-name">CreateIT</p>
               </li>
               <li>
-                <a href="#TaskApp">
+                <a href="#CheckIT">
                   <img
                     src="Images/Icons/checklist.svg"
                     alt="Project Management App Icon" />
@@ -1614,10 +1615,10 @@
                 <p class="project-name">Task App</p>
               </li>
               <li>
-                <a href="#TemplatePortfolio">
+                <a href="#KnightPortfolio">
                   <img
                     src="Images/Icons/portfolio.svg"
-                    alt="Template Portfolio Icon" />
+                    alt="Knight Portfolio Icon" />
                 </a>
                 <p class="project-name">Old Portfolio</p>
               </li>
