--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="style.css"
-         />
+    <link rel="stylesheet" href="style.css" />
     <noscript><link rel="stylesheet" href="style.css" /></noscript>
 
     <link rel="canonical" href="https://tinotenda-mhedziso.pages.dev/" />
@@ -1083,7 +1080,7 @@
           </div>
         </div>
 
-  <div class="project-item" id="CheckIT">
+        <div class="project-item" id="CheckIT">
           <div class="project-icon">
             <img src="Images/Icons/checklist.svg" alt="CheckIT Icon" />
           </div>
@@ -1096,7 +1093,7 @@
             </p>
             <p>
               <strong>Platforms:</strong>
-             Android
+              Android
             </p>
             <p>
               <strong>Version:</strong>
@@ -1124,7 +1121,7 @@
               <button class="ui-btn project-download-btn">
                 <span>
                   <a
-                    href="https://github.com/Passion-Over-Pain/IMOB-Assignment/releases/download/v1.0/lms-v1.apk">
+                    href="https://github.com/Passion-Over-Pain/CheckIT/releases/download/v1.0/CheckIT.apk">
                     Download
                   </a>
                 </span>
@@ -1203,13 +1200,9 @@
           </div>
         </div>
 
-      
-
         <div class="project-item" id="KnightPortfolio">
           <div class="project-icon">
-            <img
-              src="Images/Icons/portfolio.svg"
-              alt="Knight Portfolio Icon" />
+            <img src="Images/Icons/portfolio.svg" alt="Knight Portfolio Icon" />
           </div>
           <div class="project-details">
             <h2>Knight Portfolio</h2>
