Project Name Update

--- a/index.html
+++ b/index.html
@@ -1605,7 +1605,7 @@
                     src="Images/Icons/checklist.svg"
                     alt="Project Management App Icon" />
                 </a>
-                <p class="project-name">Task App</p>
+                <p class="project-name">CheckIT</p>
               </li>
               <li>
                 <a href="#KnightPortfolio">
