--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"
       defer></script>
 
-    <title>Tinotenda Mhedziso | Portfolio</title>
+    <title>Subhamay Ganguly | Portfolio</title>
   </head>
   <body>
     <div id="preloader">
@@ -510,11 +510,11 @@
           <span
             id="myNameTitle"
             onclick="showNotification(`How to pronounce this name...`,2)">
-            Tinotenda Mhedziso
+            Subhamay Ganguly
             <span class="helper">?</span>
           </span>
         </h1>
-        <h4>A Software Developer</h4>
+        <h4>A Full Stack Developer & AI/ML Engineer</h4>
         <div id="checkCon" class="flexBox hidden">
           <p
             id="checkConTitle"
@@ -539,7 +539,7 @@
               </div>
             </div>
             <div class="notice-content">
-              <div class="username">Tino Mhedziso</div>
+              <div class="username">Subhamay Ganguly</div>
               <div class="lable-message">Contact Me</div>
               <div class="user-id">@passionOverpain</div>
             </div>
@@ -729,14 +729,7 @@
             <h3 class="subTitle bounce">About Me</h3>
             <div class="about-container">
               <p>
-                Final year Bachelor of Information Technology student who enjoys
-                programming in JavaScript and contributing to open-source.
-                Creating my first software program in high school established a
-                deep connection for solving problems with code. To me,
-                programming is similar to conquering a challenging video game
-                boss: success often requires persistence, learning, and
-                adaptability. Each attempt sharpens my skillset, whilst
-                experience teaches me more intricate concepts.
+                Passionate Back-End Developer & AI/ML Engineer with a proven record of delivering intelligent, scalable systems. Experienced in Node.js, Express.js, MongoDB, and Python, with expertise in deploying machine learning and deep learning solutions.
               </p>
             </div>
             <div class="Extra">
@@ -766,23 +759,23 @@
                 <li>
                   <img
                     class="Icon language animate"
-                    src="Images/Icons/cs.svg"
+                    src="Images/Icons/c.svg"
                     alt="This is C#" />
-                  C#
+                  C++
                 </li>
                 <li>
                   <img
                     class="Icon language animate"
-                    src="Images/Icons/css.svg"
+                    src="Images/Icons/python.svg"
                     alt="This is CSS" />
-                  CSS3
+                  Python
                 </li>
                 <li>
                   <img
                     class="Icon language animate"
-                    src="Images/Icons/firebase.svg"
+                    src="Images/Icons/node.svg"
                     alt="This is Firebase" />
-                  Firebase
+                  Node.Js
                 </li>
                 <li>
                   <img
@@ -794,9 +787,9 @@
                 <li>
                   <img
                     class="Icon language animate"
-                    src="Images/Icons/html.svg"
+                    src="Images/Icons/expressjs.svg"
                     alt="This is HTML" />
-                  HTML5
+                  Express.js
                 </li>
                 <li>
                   <img
@@ -822,30 +815,30 @@
                 <li>
                   <img
                     class="Icon language animate"
-                    src="Images/Icons/r.svg"
+                    src="Images/Icons/php.svg"
                     alt="This is RStudio" />
-                  RStudio
+                  PHP
                 </li>
                 <li>
                   <img
                     class="Icon language animate"
-                    src="Images/Icons/unity.svg"
+                    src="Images/Icons/mongo.svg"
                     alt="This is Unity" />
-                  Unity
+                  MongoDB
                 </li>
                 <li>
                   <img
                     class="Icon language animate"
-                    src="Images/Icons/vs.svg"
+                    src="Images/Icons/tensor.svg"
                     alt="This is Visual Sstudio" />
-                  Visual Studio
+                  TensorFlow
                 </li>
                 <li>
                   <img
                     class="Icon language animate"
-                    src="Images/Icons/vscode.svg"
+                    src="Images/Icons/numpy-1.svg"
                     alt="This is Visual Studio Code" />
-                  Visual Studio Code
+                  Numpy
                 </li>
                 <br />
               </ul>
@@ -854,99 +847,71 @@
               <ul>
                 <li>
                   <span style="color: #0f0">
-                    High School: Victoria Park High
+                    Brainware University
                     <span
                       style="
                         font-family: Cambria, Cochin, Georgia, Times,
                           'Times New Roman', serif;
                       ">
-                      [2018 ~ 2022]
-                    </span>
-                  </span>
-                </li>
-                <ul>
-                  <br />
-                  Academic Awards:
-                  <li>Academic top 10</li>
-                  <li>Head Prefect</li>
-                  <li>President of The Representative Council of Learners</li>
-                  <br />
-                </ul>
-                <ul>
-                  Academic Activites:
-                  <li>Chess</li>
-                  <li>Robotics and Coding</li>
-                  <br />
-                </ul>
-                <li>
-                  <span style="color: #0f0">
-                    Nelson Mandela University
-                    <span
-                      style="
-                        font-family: Cambria, Cochin, Georgia, Times,
-                          'Times New Roman', serif;
-                      ">
-                      [2023 ~ 2025]
+                      [2021 ~ 2025]
                     </span>
                   </span>
                   <br />
                 </li>
                 <ul>
                   <br />
-                  Bachelor's degree in Information Technology
+                  Bachelor's degree in Computer Science and Engineering (AI/ML specialization)
                   <br />
-                  <br />
-                  Academic Activites:
-                  <li>Computer Society Executive</li>
+                  Relevant Coursework: Data Structures and Algorithms, Database Management Systems, Machine Learning, Deep Learning, Natural Language Processing, Computer Vision, Software Engineering, Web Development, Cloud Computing.
                   <br />
                 </ul>
               </ul>
             </div>
             <div class="View" id="Work">
               <ul>
-                <span style="color: #0f0">Society experience</span>
+                <br />
                 <br />
                 <li>
+                  <span style="color: #0f0">Working experience</span>
                   <br />
-                  [Present]
+                  [August 2025 ~ Present]
                   <br />
-                  Deputy Chairperson of the
+                  Jr. Back-End Developer
                   <span class="textBtn">
                     <a
-                      href="https://www.linkedin.com/company/computersociety/"
+                      href="https://www.linkedin.com/company/evebusiness/posts/?feedView=all"
                       target="_blank">
-                      NMU Computer Society
+                      EVE Technologies Pvt Ltd.
                     </a>
                   </span>
                 </li>
-                <br />
+                <br />     
                 <li>
                   <br />
-                  [March 2024 ~ December 2024]
+                  [February 2025 ~ August 2025]
                   <br />
-                  Events Coordinator of the
                   <span class="textBtn">
                     <a
-                      href="https://www.linkedin.com/company/computersociety/"
+                      href="https://www.linkedin.com/company/evebusiness/posts/?feedView=all"
                       target="_blank">
-                      NMU Computer Society
+                      EVE Technologies Pvt Ltd.
                     </a>
                   </span>
+                  Tech Support Executive.
                 </li>
-                <br />
-                <span style="color: #0f0">Working experience</span>
+                <br />     
                 <li>
                   <br />
-                  [June 2024 ~ July 2024]
+                  [June 2023 ~ August 2024]
                   <br />
                   <span class="textBtn">
                     <a
-                      href="https://www.linkedin.com/company/oasis-infobyte/"
+                      href="https://www.caluniv.ac.in/academic/akcsit/AKC.html"
                       target="_blank">
-                      Oasis Infobyte
+                      University of Calcutta
                     </a>
                   </span>
-                  Junior Web Development Intern
+                  Research & Development Intern.
                 </li>
                 <br />
               </ul>
@@ -1342,7 +1307,7 @@
         <div class="flexBox">
           <button class="actionBtn ui-btn" id="Git">
             <span>
-              <a href="https://github.com/Passion-Over-Pain?tab=repositories">
+              <a href="https://github.com/STREIN-11">
                 All Projects
               </a>
             </span>
