--- a/index.html
+++ b/index.html
@@ -453,12 +453,12 @@
             <ul>
               <li>
                 Email:
-                <a href="#ContactSection">tinomhedziso21@gmail.com</a>
+                <a href="#ContactSection">subhag702@gmail.com</a>
               </li>
               <li>
                 GitHub:
-                <a href="https://github.com/Passion-Over-Pain" target="_blank">
-                  Passion-Over-Pain
+                <a href="https://github.com/STREIN-11" target="_blank">
+                  STREIN-11
                 </a>
               </li>
             </ul>
@@ -934,28 +934,22 @@
             <img src="Images/Icons/theAtlasSix.svg" alt="The Atlas Six Icon" />
           </div>
           <div class="project-details">
-            <h2>The Atlas Six</h2>
+            <a href="https://drive.google.com/file/d/1bkQ_YBfvkQwvTToix3qtp9bB7K2qe2pH/view" target="_blank">
+              <h2>AI-Powered Irrigation & Watershed System</h2></a>
             <p>
-              The Atlas Six is a text-driven game set in a world of magic,
-              ancient mysteries, and alliances that are not always what they
-              seem. The journey revolves around the choices made by the created
-              player and the evolving relationships within the party.
+              Automated water monitoring and irrigation management system published as a patent (2022310681254).
             </p>
             <p>
               <strong>Platforms:</strong>
-              Desktop and Laptop
-            </p>
-            <p>
-              <strong>Version:</strong>
-              In development
+              Web and Mobile
             </p>
 
             <div class="project-tags">
-              <span class="tag">APIs</span>
+              <span class="tag">PHP</span>
               <span class="tag">CSS</span>
-              <span class="tag">Firebase</span>
-              <span class="tag">Game</span>
-              <span class="tag">HTML</span>
+              <span class="tag">IOT</span>
+              <span class="tag">ML</span>
+              <span class="tag">MongoDB</span>
               <span class="tag">JavaScript</span>
               <span class="tag">JSON</span>
             </div>
@@ -965,7 +959,7 @@
                   <a
                     href="https://github.com/Passion-Over-Pain/The-Atlas-Six"
                     target="_blank">
-                    Code
+                    View
                   </a>
                 </span>
               </button>
@@ -974,15 +968,15 @@
                 <span onclick="show404()">Hidden</span>
               </button>
 
-              <button class="ui-btn" onclick="starRepository(`The-Atlas-Six`)">
+              <!-- <button class="ui-btn" onclick="starRepository(`The-Atlas-Six`)">
                 <span>Waitlist</span>
-              </button>
+              </button> -->
             </div>
           </div>
           <div class="project-preview">
             <img
               loading="lazy"
-              src="Images/Previews/The Atlas Six.webp"
+              src="Images/Previews/ai.webp"
               alt="The Atlas Six Preview" />
           </div>
         </div>
@@ -992,49 +986,40 @@
             <img src="Images/Icons/ai.svg" alt="Passion Icon" />
           </div>
           <div class="project-details">
-            <h2>Passion</h2>
+            <a href="https://patentscope.wipo.int/search/en/detail.jsf?docId=IN380606759" target="_blank">
+            <h2>Skin Phenotype Detection</h2></a>
             <p>
-              Passion is my node-based chatbot driven by the GPT-4 mini model
-              designed to provide seamless and intelligent communication,
-              relaying information about me in a more fun but effective way.
+              AI-based system to detect different skin phenotypes and moisture levels, published as a patent (2022310681254).
             </p>
             <p>
               <strong>Platform:</strong>
-              Desktop, Laptop and Mobile
+              Web and Mobile
             </p>
-            <p>
-              <strong>Version:</strong>
-              Released - 1.3
-            </p>
+            
             <div class="project-tags">
               <span class="tag">APIs</span>
-              <span class="tag">Chatbot</span>
+              <span class="tag">Computer Vision</span>
               <span class="tag">Cloud</span>
-              <span class="tag">CSS</span>
-              <span class="tag">GPT 4 mini</span>
+              <span class="tag">Deep Learning</span>
+              <span class="tag">PHP</span>
               <span class="tag">JavaScript</span>
               <span class="tag">Remote-Database</span>
               <span class="tag">Webhooks</span>
-              <span class="tag">Whatsapp</span>
+              <span class="tag">Image Processing</span>
             </div>
             <div class="project-buttons">
               <button class="ui-btn">
                 <span>
                   <a
-                    href="https://github.com/Passion-Over-Pain/Passion"
+                    href="https://github.com/STREIN-11/Skin-Phenotypes-Detection"
                     target="_blank">
-                    Code
+                    GIT
                   </a>
                 </span>
               </button>
-
-              <button class="ui-btn" onclick="openWebchat()">
-                <span>Chat</span>
-              </button>
-
-              <button class="ui-btn" onclick="starRepository(`Passion`)">
+              <!-- <button class="ui-btn" onclick="starRepository(`Skin-Phenotypes-Detection`)">
                 <span>Like</span>
-              </button>
+              </button> -->
             </div>
           </div>
           <div class="project-preview">
@@ -1495,7 +1480,7 @@
             </a>
           </li>
           <li class="social-Icon">
-            <a href="mailto:tinomhedziso21@gmail.com" target="_blank">
+            <a href="mailto:subhag702@gmail.com" target="_blank">
               <i class="fa-solid fa-envelope-circle-check"></i>
               <span>Email</span>
             </a>
@@ -1618,8 +1603,8 @@
                           "link": "https://tinotenda-mhedziso.pages.dev/"
                         },
                         "email": {
-                          "title": "tinomhedziso21@gmail.com",
-                          "link": "tinomhedziso21@gmail.com"
+                          "title": "subhag702@gmail.com",
+                          "link": "subhag702@gmail.com"
                         },
                         "color": "#056016",
                         "variant": "soft",
