--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
           <div class="project-preview">
             <img
               loading="lazy"
-              src="Images/Previews/ai.webp"
+              src="Images/Previews/water.png"
               alt="The Atlas Six Preview" />
           </div>
         </div>
@@ -1035,51 +1035,47 @@
             <img src="Images/Icons/checklist.svg" alt="CheckIT Icon" />
           </div>
           <div class="project-details">
-            <h2>CheckIT</h2>
+            <a href="https://link.springer.com/chapter/10.1007/978-981-97-5157-0_9" target="_blank">
+            <h2>Lip-reading Deep Learning Techniques</h2></a>
             <p>
-              A full-stack Android app using Java and SQLite that facilitates
-              task management between instructors and students, with role-based
-              access for admins, instructors, and students.
+              Explored Silent Sound Technology using lip-reading and deep learning for enhanced communication and security.
             </p>
             <p>
               <strong>Platforms:</strong>
-              Android
+              Web and Mobile
             </p>
-            <p>
-              <strong>Version:</strong>
-              Released - 1.
-            </p>
+            
             <div class="project-tags">
-              <span class="tag">Android Studio</span>
-              <span class="tag">Java</span>
-              <span class="tag">Mobile</span>
-              <span class="tag">SQLite</span>
-              <span class="tag">Task App</span>
-              <span class="tag">Team Project</span>
+              <span class="tag">Deep Learning</span>
+              <span class="tag">Computer Vision</span>
+              <span class="tag">TensorFlow</span>
+              <span class="tag">NLP</span>
+              <span class="tag">PHP</span>
+              <span class="tag">MySQL</span>
             </div>
             <div class="project-buttons">
               <button class="ui-btn project-code-btn">
                 <span>
                   <a
-                    href="https://github.com/Passion-Over-Pain/CheckIT"
+                    href="https://github.com/STREIN-11/Evaluate_Lip_reading_using_Deep_Learning_Techniques."
                     target="_blank">
-                    Code
+                    GIT
                   </a>
                 </span>
               </button>
 
-              <button class="ui-btn project-download-btn">
+              <!-- <button class="ui-btn project-download-btn">
                 <span>
                   <a
                     href="https://github.com/Passion-Over-Pain/CheckIT/releases/download/v1.0/CheckIT.apk">
                     Download
                   </a>
                 </span>
-              </button>
+              </button> -->
 
-              <button class="ui-btn">
+              <!-- <button class="ui-btn">
                 <span onclick="starRepository(`CheckIT`)">Like</span>
-              </button>
+              </button> -->
             </div>
           </div>
           <div class="project-preview">
@@ -1095,27 +1091,24 @@
             <img src="Images/Icons/createIT.svg" alt="CreateIT Icon" />
           </div>
           <div class="project-details">
-            <h2>CreateIT</h2>
+            <a href="https://scholar.google.co.in/citations?view_op=view_citation&hl=en&user=QLL-DPEAAAAJ&citation_for_view=QLL-DPEAAAAJ:u5HHmVD_uO8C" target="_blank">
+            <h2>Emotion-Based Music Recommendation System</h2></a>
             <p>
-              A mobile application prototype that incorporates user's on hands
-              ingredients to consume APIs. CreateIT recommends meals based on
-              available ingredients, offering a practical and delicious solution
-              to everyday meal planning.
+              A ML model using heart rate & stress index for personalized music recommendations 
+              published at Springer ICACIE-2022.
             </p>
             <p>
               <strong>Platforms:</strong>
-              Desktop and Laptop
-            </p>
-            <p>
-              <strong>Version:</strong>
-              Prototype
+              Web
             </p>
             <div class="project-tags">
-              <span class="tag">C#</span>
+              <span class="tag">Stress index</span>
               <span class="tag">CSV</span>
-              <span class="tag">Food App</span>
+              <span class="tag">ML</span>
               <span class="tag">Local-Database</span>
-              <span class="tag">Team Project</span>
+              <span class="tag">Node</span>
+              <span class="tag">React</span>
+              <span class="tag">JSON</span>
             </div>
             <div class="project-buttons">
               <button class="ui-btn project-code-btn">
