--- a/index.html
+++ b/index.html
@@ -13,41 +13,41 @@
 
     <meta
       name="description"
-      content="Explore the portfolio of Tinotenda Mhedziso. Discover Tino's projects, skills, social links, and contact details all in one place." />
+      content="Explore the portfolio of Subhamay Ganguly. Discover Tino's projects, skills, social links, and contact details all in one place." />
     <meta
       name="keywords"
-      content="Tinotenda Mhedziso, portfolio website, software developer, web developer, Passion Over Pain, Passion-Over-Pain, GitHub, programming, coding projects, open-source, frontend developer, backend developer, full stack developer, JavaScript, HTML, CSS, software engineering" />
+      content="Subhamay Ganguly, portfolio website, software developer, web developer, Passion Over Pain, Passion-Over-Pain, GitHub, programming, coding projects, open-source, frontend developer, backend developer, full stack developer, JavaScript, HTML, CSS, software engineering" />
 
-    <meta name="author" content="Tinotenda Mhedziso" />
+    <meta name="author" content="Subhamay Ganguly" />
     <meta
       name="google-site-verification"
       content="d8Uve78HfX_Hn9B7z1HEcAUZTfJtPwbEPWyrcFXI_dI" />
     <!-- Open Graph Meta Tags (For Facebook, LinkedIn, WhatsApp) -->
-    <meta property="og:title" content="Tinotenda Mhedziso | HQ Portfolio" />
+    <meta property="og:title" content="Subhamay Ganguly | HQ Portfolio" />
     <meta
       property="og:description"
-      content="Explore Tinotenda Mhedziso's portfolio, projects, and expertise in software development." />
+      content="Explore Subhamay Ganguly's portfolio, projects, and expertise in software development." />
     <meta
       property="og:image"
       content="https://tinotenda-mhedziso.pages.dev/Images/social-preview.png" />
     <meta
       property="og:image:alt"
-      content="Tinotenda Mhedziso's portfolio preview image" />
+      content="Subhamay Ganguly's portfolio preview image" />
     <meta property="og:url" content="https://tinotenda-mhedziso.pages.dev/" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Meta Tags (For Twitter/X) -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Tinotenda Mhedziso | HQ Portfolio" />
+    <meta name="twitter:title" content="Subhamay Ganguly | HQ Portfolio" />
     <meta
       name="twitter:description"
-      content="Check out Tinotenda Mhedziso's portfolio showcasing his skills, projects, and expertise." />
+      content="Check out Subhamay Ganguly's portfolio showcasing his skills, projects, and expertise." />
     <meta
       name="twitter:image"
       content="https://tinotenda-mhedziso.pages.dev/Images/preview.png" />
     <meta
       name="twitter:image:alt"
-      content="Tinotenda Mhedziso's portfolio preview image" />
+      content="Subhamay Ganguly's portfolio preview image" />
     <link rel="apple-touch-icon" sizes="180x180" href="Images/Favicon.png" />
 
     <link rel="shortcut icon" href="Images/Favicon.png" type="image/x-icon" />
@@ -288,7 +288,7 @@
             </h2>
             <p>
               All software created or acquired under the name
-              <strong>Tinotenda Mhedziso</strong>
+              <strong>Subhamay Ganguly</strong>
               is provided as
               <strong>free-to-use open-source software</strong>
               unless explicitly stated otherwise. By using any such software,
@@ -296,19 +296,19 @@
             </p>
 
             <h3>Open-Source Conditions</h3>
-            All projects developed by Tinotenda Mhedziso are open-source, and
+            All projects developed by Subhamay Ganguly are open-source, and
             users are free to view, modify, and distribute the software,
             provided that:
             <ol style="margin-top: 10px">
               <li>
                 Attribution to the original creator (
-                <strong>Tinotenda Mhedziso</strong>
+                <strong>Subhamay Ganguly</strong>
                 ) is included if project use case is for any form of
                 distribution.
               </li>
               <li>
                 In the event of external assets or assets not being owned by
-                Tinotenda Mhedziso: Attribution is reserved and given to the
+                Subhamay Ganguly: Attribution is reserved and given to the
                 correct third-party owner. All projects which use third-party
                 assets outline the attribution agreements in the
                 <strong>ReadMe Attribution</strong>
@@ -328,7 +328,7 @@
             <p>
               <strong>"The Atlas Six"</strong>
               is a unique project developed by
-              <strong>Tinotenda Mhedziso</strong>
+              <strong>Subhamay Ganguly</strong>
               . The following special conditions apply to this project:
             </p>
             <ol>
@@ -368,7 +368,7 @@
             <p>
               To ensure a safe and respectful environment, users interacting
               across any domains or platforms owned by
-              <strong>Tinotenda Mhedziso</strong>
+              <strong>Subhamay Ganguly</strong>
               must adhere to the following guidelines:
             </p>
             <h3>Prohibited Behavior</h3>
@@ -422,7 +422,7 @@
               <li>
                 <strong>Limitation of Liability</strong>
                 : The creator,
-                <strong>Tinotenda Mhedziso</strong>
+                <strong>Subhamay Ganguly</strong>
                 , is not liable for any damages arising from the use of the
                 software or services.
               </li>
@@ -449,7 +449,7 @@
               For any questions or concerns regarding these Terms of Service,
               please contact:
             </p>
-            <strong>Tinotenda Mhedziso</strong>
+            <strong>Subhamay Ganguly</strong>
             <ul>
               <li>
                 Email:
@@ -466,7 +466,7 @@
             <hr />
             <p>
               By using any software, services, or platforms provided by
-              <strong>Tinotenda Mhedziso</strong>
+              <strong>Subhamay Ganguly</strong>
               , users acknowledge that they have read, understood, and agreed to
               these Terms of Service.
             </p>
@@ -525,7 +525,7 @@
           <div id="checklist"></div>
         </div>
         <div class="flexBox">
-          <button id="btn-message" class="button-message" onclick="contactMe()">
+          <button id="btn-message" class="button-message" onclick="contactMe()" href="https://www.linkedin.com/in/subhamay-ganguly-526972248/" taget="_blank">
             <div class="content-avatar">
               <div class="status-user"></div>
               <div class="avatar">
@@ -541,7 +541,7 @@
             <div class="notice-content">
               <div class="username">Subhamay Ganguly</div>
               <div class="lable-message">Contact Me</div>
-              <div class="user-id">@passionOverpain</div>
+              <div class="user-id">@STREIN-11</div>
             </div>
           </button>
         </div>
@@ -702,13 +702,13 @@
           <li onclick="followUser()">
             <img
               src="Images/Icons/support.svg"
-              alt="Follow Tinotenda Mhedziso Icon" />
+              alt="Follow Subhamay Ganguly Icon" />
             <x>Follow Me</x>
           </li>
           <li onclick="supportMe()">
             <img
               src="Images/Icons/support.svg"
-              alt="Support Tinotenda Mhedziso  Icon" />
+              alt="Support Subhamay Ganguly  Icon" />
             <x>Support Me</x>
           </li>
         </ul>
@@ -1148,40 +1148,35 @@
             <img src="Images/Icons/portfolio.svg" alt="Knight Portfolio Icon" />
           </div>
           <div class="project-details">
-            <h2>Knight Portfolio</h2>
+            <a href="https://github.com/STREIN-11/FauxShield" target="_blank">
+            <h2>FauxShield - Deepfake Detection Platform</h2></a>
             <p>
-              An older version on my portfolio website built from the Knight
-              Bootstrap template.
+              AI-powered system to detect fake audio, video & images using deep learning; showcased at international forums.
             </p>
             <p>
               <strong>Platforms:</strong>
-              Desktop, Laptop and Mobile
-            </p>
-            <p>
-              <strong>Version:</strong>
-              Released - 1.
+              Web and Mobile
             </p>
             <div class="project-tags">
-              <span class="tag">Bootstrap</span>
-              <span class="tag">CSS</span>
-              <span class="tag">Email js</span>
-              <span class="tag">HTML</span>
+              <span class="tag">Deep Learning</span>
+              <span class="tag">Computer Vision</span>
+              <span class="tag">React native</span>
+              <span class="tag">Express</span>
               <span class="tag">JavaScript</span>
-              <span class="tag">Portfolio</span>
-              <span class="tag">Website</span>
+              <span class="tag">MongoDB</span>
             </div>
             <div class="project-buttons">
               <button class="ui-btn project-code-btn">
                 <span>
                   <a
-                    href="https://github.com/Passion-Over-Pain/Portfolio-Redesigned"
+                    href="https://github.com/STREIN-11/FauxShield"
                     target="_blank">
-                    Code
+                    GIT
                   </a>
                 </span>
               </button>
 
-              <button class="ui-btn project-site-btn">
+              <!-- <button class="ui-btn project-site-btn">
                 <span>
                   <a
                     href="https://passion-over-pain.github.io/Portfolio-Redesigned/"
@@ -1195,7 +1190,7 @@
                 <span onclick="starRepository(`Portfolio-Redesigned`)">
                   Like
                 </span>
-              </button>
+              </button> -->
             </div>
           </div>
           <div
@@ -1563,7 +1558,7 @@
         </div>
         <div class="footer-bottom">
           <x class="textBtn" onclick="contactMe()">Contact Me</x>
-          <p>&copy; 2025 Tinotenda Mhedziso. All Rights Reserved.</p>
+          <p>&copy; 2025 Subhamay Ganguly. All Rights Reserved.</p>
           <a href="#" class="back-to-top">Back to Top</a>
           <button
             class="webchat-toggle"
